# clacal

./: .gitignore  CALCULATIONS_new.md  Info.plist  Justfile  Package.resolved  Package.swift  README.md  notes.md  project.yml
Clacal.xcodeproj/: project.pbxproj
Clacal.xcodeproj/xcshareddata/xcschemes/: Clacal.xcscheme
ClaudeCodeUsage.xcodeproj/: project.pbxproj
Sources/Clacal/: App.swift
Sources/Clacal/Models/: UsageColor.swift  UsageMetrics.swift  UsageStats.swift
Sources/Clacal/Services/: CredentialProvider.swift  DataStore.swift  UsageMonitor.swift  UsageOptimiser.swift
Sources/Clacal/Validation/: PacingFixtures.swift  PacingKernel.swift  PacingReplay.swift  PacingReport.swift  PacingSweep.swift  PacingTypes.swift
Sources/Clacal/Views/: CalibratorIcon.swift  MetricsView.swift  PopoverView.swift  StatsView.swift
Sources/ClacalCLI/: ClacalCLI.swift
Sources/ClacalCore/Models/: UsageMetrics.swift  UsageStats.swift
Sources/ClacalCore/Services/: DataStore.swift  MarkdownUsageRenderer.swift  UsageMonitor.swift  UsageReporter.swift
Sources/ClaudeCodeUsage/: App.swift
Tests/ClacalTests/: APIResponseTests.swift  AppConfigTests.swift  CLIPackagingTests.swift  CalibratorIconTests.swift  ColorTierTests.swift  DataStoreTests.swift  PacingFixtures.swift  PacingReplay.swift  PacingReport.swift  PacingSweep.swift  TestHelpers.swift  UsageMonitorTests.swift  UsageOptimiserTests.swift  UsageReportTests.swift  ValidationFastTests.swift  ValidationSweepTests.swift
manim-anim/: .gitignore  pyproject.toml
manim-anim/src/manim_anim/: __init__.py  scene.py
(+8 files in other folders)
